--- a/src/components/TrendingList/trending.module.css
+++ b/src/components/TrendingList/trending.module.css
@@ -7,6 +7,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+
 }
 
 .trendingCard {
@@ -18,6 +19,20 @@
     margin: 30px;
     cursor: pointer;
     border-radius: 10px;
+    transition: all .15s ease-in-out;
+    transform: scale(1);
+    box-shadow: 0 0 1px 1px #54707e18,
+        1px 1px 10px #4341571a;
+    transition: box-shadow .15s ease-in-out,
+        transform .15s ease-in-out;
+
+}
+
+.trendingCard:hover {
+    transform: scale(1.01);
+    box-shadow: 1px 1px 10px #4341573a;
+    transition: box-shadow .15s ease-in-out,
+        transform .15s ease-in-out
 }
 
 .posterImg {
