--- a/src/components/ShowDetails/show.module.css
+++ b/src/components/ShowDetails/show.module.css
@@ -1,7 +1,7 @@
 .showContainer {
     position: relative;
     height: 100vh;
-    overflow: hidden;
+
     width: 100%;
 }
 
@@ -83,4 +83,78 @@
     margin: 20px;
     z-index: 10000;
     cursor: pointer;
+}
+
+.showMetaData {
+    color: #fff;
+    margin-bottom: 10px;
+    text-align: left;
+    font-family: 'Roboto Mono',
+        monospace;
+}
+
+.relatedSectionTitle {
+    font-size: 40px;
+    color: #000;
+    font-weight: bold;
+    text-align: left;
+    margin-left: 10%;
+    width: 90;
+    margin-top: 50px;
+    margin-bottom: 25px;
+}
+
+.relatedItemsContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    margin-left: 10%;
+    flex-wrap: wrap;
+}
+
+.relatedContainer {
+    width: 200px;
+    height: 300px;
+    margin: 20px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    position: relative;
+    background-color: #000;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-bottom: 50px;
+
+}
+
+.relatedMetaDataContainer {
+    position: absolute;
+    z-index: 100;
+    color: #fff;
+}
+
+.relatedTitle {
+    font-weight: bold;
+    margin: 15px;
+    font-size: 25px;
+    text-align: left;
+
+}
+
+.relatedItemPoster {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
+.relatedPoster {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    z-index: 0;
+    object-fit: cover;
+    background-color: #000;
+    opacity: 0.5;
+    border-radius: 10px;
 }
