--- a/src/components/Menu/menu.module.css
+++ b/src/components/Menu/menu.module.css
@@ -13,6 +13,7 @@
     margin-right: 20px;
     font-weight: bold;
     cursor: pointer;
+    padding-top: 5px;
 }
 
 .menuLogo {
@@ -38,4 +39,32 @@ a {
 
 .menuLogoLink {
     height: 100%;
+}
+
+@media only screen and (max-width: 966px) {
+
+    .menuLogo {
+        font-size: 30px;
+        font-weight: bold;
+        margin-right: 20px;
+        background-color: #000;
+        color: #fff;
+        height: 100%;
+        width: unset;
+        padding-left: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        padding-right: 20px;
+    }
+
+    .menuItem {
+        margin-left: 15px;
+        margin-right: 15px;
+        font-weight: bold;
+        cursor: pointer;
+        font-size: 12px;
+    }
+
 }
