--- a/src/components/MovieDetails/movie.module.css
+++ b/src/components/MovieDetails/movie.module.css
@@ -184,4 +184,67 @@
     margin: 10px;
     font-size: 30px;
     cursor: pointer;
+    color: #565656;
+}
+
+.detailBoxItemSelected {
+    font-weight: bold;
+    margin: 10px;
+    font-size: 30px;
+    cursor: pointer;
+
+
+}
+
+.relatedItemsContainerInner {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media only screen and (max-width: 1800px) {
+    .relatedItemsContainerInner {
+        width: 950px;
+        flex-wrap: wrap;
+    }
+}
+
+@media only screen and (max-width: 966px) {
+    .showOverview {
+        color: #fff;
+        width: 80vw;
+        line-height: 1.3;
+        letter-spacing: 1.3px;
+        text-align: left;
+    }
+
+    .detailBoxItem {
+        font-size: 16px;
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
+    .detailBoxItemSelected {
+        font-size: 16px;
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
+    .showName {
+        font-size: 3rem;
+    }
+
+    .showMetaData {
+        color: #fff;
+        margin-bottom: 10px;
+        text-align: left;
+        font-family: 'Roboto Mono',
+            monospace;
+        font-size: 14px;
+    }
+
+    .starringTitle {
+        margin-top: 30px;
+    }
 }
