Combine TV and Movie view modules into single 'Media' module.

--- a/src/components/MediaDetails/mediaDetails.module.css
+++ b/src/components/MediaDetails/mediaDetails.module.css
@@ -34,7 +34,7 @@
     z-index: 0;
     object-fit: cover;
     background-color: #000;
-    opacity: 0.4;
+    opacity: 0.3;
 }
 
 .headerInfoOuter {
@@ -68,8 +68,10 @@
     font-weight: bold;
     text-align: left;
     display: inline-block;
-    padding-left: 20px;
-    padding-right: 20px;
+    font-family: "Proxima Nova Bold";
+    padding: 15px;
+    padding-left: 15px;
+    padding-right: 25px;
 }
 
 .showOverview {
@@ -114,7 +116,7 @@
     align-items: center;
     width: 80%;
     margin-left: 10%;
-    flex-wrap: wrap;
+
 }
 
 .relatedContainer {
@@ -129,7 +131,6 @@
     border-radius: 10px;
     cursor: pointer;
     margin-bottom: 50px;
-
 }
 
 .relatedMetaDataContainer {
@@ -203,7 +204,7 @@
     align-items: center;
 }
 
-@media only screen and (max-width: 1800px) {
+@media only screen and (max-width: 1500px) {
     .relatedItemsContainerInner {
         width: 950px;
         flex-wrap: wrap;
