--- a/src/components/Menu/menu.module.css
+++ b/src/components/Menu/menu.module.css
@@ -17,9 +17,9 @@
 }
 
 .menuLogo {
-    font-size: 30px;
+    font-size: 40px;
+    letter-spacing: 1.5;
     font-weight: bold;
-    margin-right: 20px;
     background-color: #000;
     color: #fff;
     height: 100%;
@@ -28,6 +28,17 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    font-family: -apple-system,
+        BlinkMacSystemFont,
+        "Segoe UI",
+        "Roboto",
+        "Oxygen",
+        "Ubuntu",
+        "Cantarell",
+        "Fira Sans",
+        "Droid Sans",
+        "Helvetica Neue",
+        sans-serif;
 }
 
 a {
