--- a/src/components/Details/details.module.css
+++ b/src/components/Details/details.module.css
@@ -18,7 +18,7 @@
 
 .actorContainer:first-of-type {
     margin-left: 0px;
-    margin-right: 10px;
+    margin-right: 15px;
     text-align: center;
 }
 
@@ -27,7 +27,6 @@
     justify-content: center;
     text-align: center;
     margin-bottom: 10px;
-    height: 110px;
 }
 
 .characterName {
@@ -42,8 +41,6 @@
 .actorImage {
     height: 50px;
     width: 50px;
-
-
     background-size: cover;
     background-position: center;
     border-radius: 50%;
@@ -54,6 +51,19 @@
 .detailsStarringTitle {
     font-weight: bold;
     color: #fff;
-    font-size: 20px;
-    margin-top: 50px;
+    font-size: 16px;
+    margin-top: 30px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 1.3px;
+}
+
+@media only screen and (max-width: 1100px) {
+    .actorImage {
+        height: 75px;
+        width: 75px;
+        background-size: cover;
+        background-position: center;
+        border-radius: 50%;
+    }
 }
