--- a/src/components/Reviews/reviews.module.css
+++ b/src/components/Reviews/reviews.module.css
@@ -2,11 +2,10 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    width: 70vw;
+    width: 100vw;
     height: 100%;
     overflow: scroll;
-    padding-top: 50px;
-    margin-top: 50px;
+    padding-top: 25px;
 }
 
 .leftAlignedReviewInfo {
@@ -33,19 +32,29 @@
     margin-left: 25%;
 }
 
+.reviewsTitleContainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .reviewsTitle {
     font-size: 40px;
     color: #000;
     font-weight: bold;
     text-align: left;
-    margin-left: 10%;
-    width: 90;
-    margin-top: 50px;
+    width: 100%;
+    margin-top: 60px;
     margin-bottom: 25px;
+    width: 70vw;
+    font-family: "Proxima Nova Bold";
+    font-size: 3.5rem;
+
 }
 
 .reviewCardContainer {
-    width: 450px;
+    width: 55vw;
     background-color: #fff;
     border-radius: 5px;
     padding-left: 30px;
@@ -55,6 +64,15 @@
     margin: 10px;
     padding: 30px;
     margin-bottom: 30px;
+    box-shadow: 0 0 1px 1px #607d8b08,
+        1px 1px 10px #4341571a;
+    transition: all .15s ease-in-out;
+}
+
+.reviewCardContainer:hover {
+    box-shadow: 1px 1px 10px #4341573a;
+    transition: all .15s ease-in-out;
+    transform: scale(1.01)
 }
 
 .reviewContainer {
