--- a/src/components/Search/search.module.css
+++ b/src/components/Search/search.module.css
@@ -1,4 +1,27 @@
-.search {
+.searchLight {
+    background-color: unset;
+    border: unset;
+    border-width: 0px;
+    border-bottom-width: 1px;
+    border-color: #fff;
+    border-style: solid;
+    width: 210px;
+    outline: none;
+    color: #fff;
+    font-weight: bold;
+    padding-bottom: 4px;
+    margin-top: 3px;
+    font-size: 14px;
+    margin-left: 20px;
+}
+
+.searchLight::placeholder {
+    color: #fff;
+    font-weight: bold;
+
+}
+
+.searchDark {
     background-color: unset;
     border: unset;
     border-width: 0px;
@@ -13,8 +36,8 @@
     font-weight: bold;
 }
 
-.search::placeholder {
-    color: #fff;
+.searchDark::placeholder {
+    color: #000;
     font-weight: bold;
     padding: 5px;
 }
